# pykagool

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: tests.yml
kagool/: _utils.py  git_checker.py
src/: versioning.py
