[metadata]
name = pykagool
description = Kaggle Tools for Python
author = Rolf Britten
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    pykagool
install_requires =
    subprocess
python_requires = >=3.6
package_dir =
    =src
zip_safe = no