[metadata]
name = kagool
description = Kaggle Tools for Python
author = Rolf Britten
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    kagool
install_requires = xgboost
python_requires = >=3.6
zip_safe = no

[flake8]
max-line-length = 120